<resources>
    <string name="app_name">DesignPatternDemo</string>
    <string name="mode_simple_factory">简单工厂模式</string>
    <string name="mode_strategy">策略模式</string>
    <string name="mode_single_resp">单一职责原则</string>
    <string name="mode_open_close">开放-封闭原则</string>
    <string name="mode_dep">依赖倒转原则</string>
    <string name="mode_decorate">装饰模式</string>
    <string name="mode_proxy">代理模式</string>
    <string name="mode_factory">工厂方法模式</string>
    <string name="mode_prototype">原型模式</string>
    <string name="mode_template">模板方法模式</string>
    <string name="mode_dmt">迪米特法则</string>
    <string name="mode_appearance">外观模式</string>
    <string name="mode_builder">建造者模式</string>
    <string name="mode_observer">观察者模式</string>
    <string name="mode_abstract_factory">抽象工厂模式</string>
    <string name="mode_state">状态模式</string>
    <string name="mode_adapter">适配器模式</string>
    <string name="mode_memo">备忘录模式</string>
    <string name="mode_portfolio">组合模式</string>
    <string name="mode_iterator">迭代器模式</string>
    <string name="mode_single_instance">单例模式</string>
    <string name="mode_bridge">桥接模式</string>
    <string name="mode_order">命令模式</string>
    <string name="mode_liability_chain">职责链模式</string>
    <string name="mode_broker">中介者模式</string>
    <string name="mode_flyweight">享元模式</string>
    <string name="mode_interpreter">解释器模式</string>
    <string name="mode_visitor">访问者模式</string>
    <string name="clear_blank">清空</string>
    <string name="goods_price">商品单价：</string>
    <string name="goods_num">商品数量：</string>
    <string name="preference_type">优惠类型：</string>
    <string name="pay_money">总计：</string>
    <string name="confirm">确定</string>
    <string name="reset">重置</string>
    <string name="scores">积分：</string>
    <string name="person">人物：</string>
    <string name="decorator">穿着：</string>
    <string name="decorator_person">装扮一下吧</string>
    <string name="decorator_finished">闪亮登场：</string>
    <string name="pursuiter">帅哥：</string>
    <string name="proxy">代理：</string>
    <string name="beautiful_mm">美女：</string>
    <string name="pursuit">展开追求吧</string>
    <string name="name">姓名：</string>
    <string name="sex">性别：</string>
    <string name="workexperience">工作经历</string>
    <string name="time">时间：</string>
    <string name="company">企业：</string>
    <string name="result_01">浅复制结果</string>
    <string name="result_deep">深复制结果</string>
    <string name="age">年龄：</string>
    <string name="question">1到5五个数字，利用+、-、*、/和括号运算最后得出结果0。说明：每个数字和运算符号只能使用一次,而且运算符号顺序按照+、-、*、/排列</string>
    <string name="describe">一共三支股票，分为用户直接买卖股票和通过买基金实现买卖股票两种方式实现</string>
    <string name="height">身高：</string>
    <string name="weight">体重：</string>
    <string name="build_person">创建小人</string>
</resources>
