<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_10">
    <!--姓名、性别-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/et_input_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_40"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_10"
            android:text="@string/sex" />

        <Spinner
            android:id="@+id/sp_select_sex"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_40"
            android:layout_weight="1"
            android:background="@drawable/shape_four_cornor_gray" />
    </LinearLayout>
    <!--年龄、身高、体重-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age" />

        <EditText
            android:id="@+id/et_input_age"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_40"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height" />

        <EditText
            android:id="@+id/et_input_height"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_40"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight" />

        <EditText
            android:id="@+id/et_input_weight"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_40"
            android:layout_weight="1" />

    </LinearLayout>
    <!--结果-->
    <Button
        android:id="@+id/btn_build"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_40"
        android:layout_marginTop="@dimen/space_10"
        android:text="@string/build_person" />

    <TextView
        android:id="@+id/tv_build_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:textColor="@color/colorAccent" />

</LinearLayout>